--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -13,10 +13,39 @@ CONFIG_MTK_FIRST_IF_EPAELNA=y
 CONFIG_MTK_FIRST_IF_IPAILNA=y
 CONFIG_MTK_FIRST_IF_EPAILNA=y
 CONFIG_MTK_FIRST_IF_IPAELNA=y
+CONFIG_MTK_FAST_NAT_SUPPORT=y
+CONFIG_MTK_WHNAT_SUPPORT=y
+CONFIG_MTK_LED_CONTROL_SUPPORT=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_FIRST_IF_MT7615E=y
+CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=flash
+CONFIG_MTK_FIRST_IF_EEPROM_PROM=prom
+CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=efuse
+CONFIG_MTK_INTERWORKING=y
+CONFIG_MTK_WNM_SUPPORT=y
+CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+CONFIG_MTK_DOT11R_FT_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_DPP_SUPPORT=y
+CONFIG_MTK_MBO_SUPPORT=y
+CONFIG_MTK_LLTD_SUPPORT=y
+CONFIG_MTK_WAPI_SUPPORT=y
+CONFIG_MTK_FTM_SUPPORT=y
+CONFIG_MTK_MEMORY_OPTIMIZATION=y
+CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
+CONFIG_MTK_MWDS=y
+CONFIG_MTK_MAP_R2_VER_SUPPORT=y
+CONFIG_MTK_CFG80211_SUPPORT=y
+CONFIG_MTK_APCLI_STA_SUPPORT=y
+CONFIG_MTK_WDS_STA_SUPPORT=y
+CONFIG_MTK_FAST_UP_RATE_SUPPORT=y
+CONFIG_MTK_AIRPLAY_SUPPORT=y
+CONFIG_MTK_WIFI_FWD_SUPPORT
+CONFIG_DPP_FEATURE=y
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
-CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_SINGLE_SKU=y
 CONFIG_HW_NAT=y
 CONFIG_FAST_NAT_SUPPORT=y
