--- a/config/msg1500-xiao.config
+++ b/config/msg1500-xiao.config
@@ -122,6 +122,7 @@ CONFIG_PACKAGE_kmod-usb-printer=y
 #
 # 插件集成
 #
+CONFIG_PACKAGE_mac80211=n
 CONFIG_PACKAGE_adbyby=y
 CONFIG_PACKAGE_fullconenat=y
 CONFIG_PACKAGE_kmod-mtk-hnat=y
