--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -131,6 +131,7 @@ CONFIG_PACKAGE_kmod-usb-net-rndis=y
 #
 # 插件集成
 #
+CONFIG_PACKAGE_mac80211=n
 CONFIG_PACKAGE_adbyby=y
 #CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_aria2=y
