--- a/.github/workflows/msg1500-5.10-xiao.yml
+++ b/.github/workflows/msg1500-5.10-xiao.yml
@@ -39,7 +39,7 @@ on:
 
 
 env:
-  REPO_URL: https://github.com/benboguan/lede0
+  REPO_URL: https://github.com/nanchuci/lede1
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/msg1500-xiao.config
