--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -16,10 +16,10 @@ CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_FIRST_IF_MT7615E=y
 CONFIG_MTK_RT_FIRST_CARD=7615
-CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
-CONFIG_MTK_FIRST_IF_EEPROM_PROM=y
-CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=y
-CONFIG_MTK_RT_FIRST_CARD_EEPROM=y
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=n
+CONFIG_MTK_FIRST_IF_EEPROM_PROM=n
+CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=n
+CONFIG_MTK_RT_FIRST_CARD_EEPROM=n
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
 CONFIG_MTK_DOT11K_RRM_SUPPORT=y
@@ -29,21 +29,21 @@ CONFIG_MTK_DPP_SUPPORT=y
 CONFIG_MTK_MBO_SUPPORT=y
 CONFIG_MTK_FTM_SUPPORT=n
 CONFIG_MTK_RF_LOCKDOWN_SUPPORT=n
-CONFIG_MTK_MEMORY_OPTIMIZATION=y
+CONFIG_MTK_MEMORY_OPTIMIZATION=n
 CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=n
-CONFIG_MTK_MWDS=y
-CONFIG_MTK_MAP_SUPPORT=y
-CONFIG_MTK_MAP_R2_VER_SUPPORT=y
-CONFIG_MTK_CON_WPS_SUPPORT=y
+CONFIG_MTK_MWDS=n
+CONFIG_MTK_MAP_SUPPORT=n
+CONFIG_MTK_MAP_R2_VER_SUPPORT=n
+CONFIG_MTK_CON_WPS_SUPPORT=n
 CONFIG_MTK_CFG80211_SUPPORT=y
-CONFIG_MTK_CFG80211_P2P_SUPPORT=y
-CONFIG_MTK_CFG80211_P2P_MULTI_CHAN_SUPPORT=y
+CONFIG_MTK_CFG80211_P2P_SUPPORT=n
+CONFIG_MTK_CFG80211_P2P_MULTI_CHAN_SUPPORT=n
 CONFIG_MTK_MU_MIMO_SUPPORT=y
-CONFIG_MTK_APCLI_STA_SUPPORT=y
-CONFIG_MTK_WDS_STA_SUPPORT=y
-CONFIG_MTK_FAST_UP_RATE_SUPPORT=y
+CONFIG_MTK_APCLI_STA_SUPPORT=n
+CONFIG_MTK_WDS_STA_SUPPORT=n
+CONFIG_MTK_FAST_UP_RATE_SUPPORT=n
 CONFIG_MTK_AIRPLAY_SUPPORT=n
-CONFIG_MTK_WIFI_FWD_SUPPORT=y
+CONFIG_MTK_WIFI_FWD_SUPPORT=n
 CONFIG_DPP_FEATURE=y
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
