--- a/config/msg1500-xiao.config
+++ b/config/msg1500-xiao.config
@@ -8,8 +8,14 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-x-00=y
 #
 # MTK驱动选项
 #
+CONFIG_FIRST_IF_EEPROM_FLASH=y
 CONFIG_MTK_FIRST_IF_EPAELNA=y
-# CONFIG_MTK_FIRST_IF_IPAILNA is not set
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+CONFIG_MTK_INTERWORKING=y
+CONFIG_MTK_WNM_SUPPORT=y
+CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+CONFIG_MTK_DOT11R_FT_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
 CONFIG_MTK_LED_CONTROL_SUPPORT=y
@@ -17,15 +23,9 @@ CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_FIRST_IF_MT7615E=y
 CONFIG_MTK_RT_FIRST_CARD=7615
 CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
-CONFIG_MTK_FIRST_IF_EEPROM_PROM=n
-CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=n
-CONFIG_MTK_RT_FIRST_CARD_EEPROM=n
-CONFIG_MTK_INTERWORKING=y
-CONFIG_MTK_WNM_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
-CONFIG_MTK_DPP_SUPPORT=y
+CONFIG_MTK_FIRST_IF_EEPROM_PROM=y
+CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=y
+CONFIG_MTK_RT_FIRST_CARD_EEPROM=y
 CONFIG_MTK_MBO_SUPPORT=n
 CONFIG_MTK_FTM_SUPPORT=n
 CONFIG_MTK_RF_LOCKDOWN_SUPPORT=n
@@ -44,7 +44,7 @@ CONFIG_MTK_WDS_STA_SUPPORT=n
 CONFIG_MTK_FAST_UP_RATE_SUPPORT=n
 CONFIG_MTK_AIRPLAY_SUPPORT=n
 CONFIG_MTK_WIFI_FWD_SUPPORT=n
-CONFIG_DPP_FEATURE=y
+CONFIG_DPP_FEATURE=n
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
