--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -8,14 +8,8 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-x-00=y
 #
 # MTK驱动选项
 #
-CONFIG_FIRST_IF_EEPROM_FLASH=y
 CONFIG_MTK_FIRST_IF_EPAELNA=y
 CONFIG_MTK_FIRST_IF_IPAILNA=y
-CONFIG_MTK_INTERWORKING=y
-CONFIG_MTK_WNM_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
 CONFIG_MTK_LED_CONTROL_SUPPORT=y
@@ -24,32 +18,34 @@ CONFIG_MTK_FIRST_IF_MT7615E=y
 CONFIG_MTK_RT_FIRST_CARD=7615
 CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
 CONFIG_MTK_FIRST_IF_EEPROM_PROM=y
-CONFIG_MTK_FIRST_IF_EEPROM_EFUSE=y
 CONFIG_MTK_RT_FIRST_CARD_EEPROM=y
-CONFIG_MTK_MBO_SUPPORT=n
-CONFIG_MTK_FTM_SUPPORT=n
-CONFIG_MTK_RF_LOCKDOWN_SUPPORT=n
-CONFIG_MTK_MEMORY_OPTIMIZATION=n
-CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=n
-CONFIG_MTK_MWDS=n
-CONFIG_MTK_MAP_SUPPORT=n
-CONFIG_MTK_MAP_R2_VER_SUPPORT=n
-CONFIG_MTK_CON_WPS_SUPPORT=n
-CONFIG_MTK_CFG80211_SUPPORT=n
-CONFIG_MTK_CFG80211_P2P_SUPPORT=n
-CONFIG_MTK_CFG80211_P2P_MULTI_CHAN_SUPPORT=n
+CONFIG_MTK_INTERWORKING=y
+CONFIG_MTK_WNM_SUPPORT=y
+CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+CONFIG_MTK_DOT11R_FT_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_DPP_SUPPORT=y
+CONFIG_MTK_MBO_SUPPORT=y
+CONFIG_MTK_FTM_SUPPORT=y
+CONFIG_MTK_MEMORY_OPTIMIZATION=y
+CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
+CONFIG_MTK_MWDS=y
+CONFIG_MTK_MAP_R2_VER_SUPPORT=y
+CONFIG_MTK_CFG80211_SUPPORT=y
+CONFIG_MTK_CFG80211_P2P_SUPPORT=y
+CONFIG_MTK_CFG80211_P2P_MULTI_CHAN_SUPPORT=y
 CONFIG_MTK_MU_MIMO_SUPPORT=y
-CONFIG_MTK_APCLI_STA_SUPPORT=n
-CONFIG_MTK_WDS_STA_SUPPORT=n
-CONFIG_MTK_FAST_UP_RATE_SUPPORT=n
-CONFIG_MTK_AIRPLAY_SUPPORT=n
-CONFIG_MTK_WIFI_FWD_SUPPORT=n
-CONFIG_DPP_FEATURE=n
+CONFIG_MTK_APCLI_STA_SUPPORT=y
+CONFIG_MTK_WDS_STA_SUPPORT=y
+CONFIG_MTK_FAST_UP_RATE_SUPPORT=y
+CONFIG_MTK_AIRPLAY_SUPPORT=y
+CONFIG_MTK_WIFI_FWD_SUPPORT=y
+CONFIG_DPP_FEATURE=y
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
 CONFIG_SINGLE_SKU=y
-CONFIG_SINGLE_SKU_V2_SUPPORT=n
+CONFIG_SINGLE_SKU_V2_SUPPORT=y
 CONFIG_HW_NAT=y
 CONFIG_FAST_NAT_SUPPORT=y
 CONFIG_RA_NAT_HW=y
