--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -9,16 +9,12 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-x-00=y
 # MTK驱动选项
 #
 CONFIG_MTK_FIRST_IF_EPAELNA=y
-CONFIG_MTK_FIRST_IF_IPAILNA=y
+# CONFIG_MTK_FIRST_IF_IPAILNA is not set
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
-CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_FIRST_IF_MT7615E=y
 CONFIG_MTK_RT_FIRST_CARD=7615
-CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
-CONFIG_MTK_FIRST_IF_EEPROM_PROM=y
-CONFIG_MTK_RT_FIRST_CARD_EEPROM=y
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
 CONFIG_MTK_DOT11K_RRM_SUPPORT=y
@@ -26,24 +22,10 @@ CONFIG_MTK_DOT11R_FT_SUPPORT=y
 CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_DPP_SUPPORT=y
 CONFIG_MTK_MBO_SUPPORT=y
-CONFIG_MTK_FTM_SUPPORT=y
-CONFIG_MTK_MEMORY_OPTIMIZATION=y
-CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
-CONFIG_MTK_MWDS=y
-CONFIG_MTK_MAP_R2_VER_SUPPORT=y
-CONFIG_MTK_CFG80211_SUPPORT=y
-CONFIG_MTK_CFG80211_P2P_SUPPORT=y
-CONFIG_MTK_CFG80211_P2P_MULTI_CHAN_SUPPORT=y
-CONFIG_MTK_MU_MIMO_SUPPORT=y
-CONFIG_MTK_APCLI_STA_SUPPORT=y
-CONFIG_MTK_WDS_STA_SUPPORT=y
-CONFIG_MTK_FAST_UP_RATE_SUPPORT=y
-CONFIG_MTK_AIRPLAY_SUPPORT=y
-CONFIG_MTK_WIFI_FWD_SUPPORT=y
-CONFIG_DPP_FEATURE=y
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
+CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_SINGLE_SKU=y
 CONFIG_SINGLE_SKU_V2_SUPPORT=y
 CONFIG_HW_NAT=y
@@ -54,9 +36,9 @@ CONFIG_RA_HW_NAT_LAN_VLANID=1
 CONFIG_RA_HW_NAT_WAN_VLANID=2
 # CONFIG_RA_HW_NAT_TBL_1K is not set
 # CONFIG_RA_HW_NAT_TBL_2K is not set
-CONFIG_RA_HW_NAT_TBL_4K=y
+# CONFIG_RA_HW_NAT_TBL_4K is not set
 # CONFIG_RA_HW_NAT_TBL_8K is not set
-# CONFIG_RA_HW_NAT_TBL_16K is not set
+CONFIG_RA_HW_NAT_TBL_16K=y
 CONFIG_HNAT_V2=y
 CONFIG_RA_HW_NAT_IPV6=y
 CONFIG_RA_HW_NAT_WIFI=y
@@ -64,7 +46,17 @@ CONFIG_RA_HW_NAT_WIFI_NEW_ARCH=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_TX=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_RX=y
-
+CONFIG_WIFI_MODE_BOTH=m
+CONFIG_CHIP_MT7615E=y
+CONFIG_MT_WIFI=m
+CONFIG_WIFI_BASIC_FUNC=y
+CONFIG_DOT11_N_SUPPORT=y
+CONFIG_DOT11_VHT_AC=y
+CONFIG_HDR_TRANS_TX_SUPPORT=y
+CONFIG_HDR_TRANS_RX_SUPPORT=y
+CONFIG_DBDC_MODE=y
+CONFIG_MULTI_PROFILE_SUPPORT=y
+CONFIG_DEFAULT_5G_PROFILE=y
 #
 #开启off加速
 #
