--- a/.github/workflows/tx1801.yml
+++ b/.github/workflows/tx1801.yml
@@ -9,7 +9,7 @@
 #代码里有 name: 后面的内容随便改,冒号后面是有个空格的,如果修改固件名字就要考虑能不能显示出你想要的
 
 
-name: OpenWrt-msg1500 闭源超精简固件
+name: OpenWrt-tx1801 闭源固件
 
 on: 
   release:
@@ -42,7 +42,7 @@ env:
   REPO_URL: https://github.com/benboguan/lede0
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/msg1500-xiao.config
+  CONFIG_FILE: config/tx1801.config
   DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part2.sh
   UPLOAD_BIN_DIR: true
@@ -167,7 +167,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: msg1500-LEDE-dbdc精简固件
+        name: tx1801-LEDE-dbdc固件
         path: ${{ env.FIRMWARE }}
 
     - name: 上传固件到WeTransfer
