--- a/config/TX1801.config
+++ b/config/TX1801.config
@@ -3,7 +3,7 @@
 #
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_raisecom_msg1500-x-00=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_h3c_tx1801-plus=y
 
 #
 # MTK驱动选项
@@ -13,8 +13,8 @@ CONFIG_MTK_FIRST_IF_EPAELNA=y
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
 CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_FIRST_IF_MT7615E=y
-CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_FIRST_IF_MT7915E=y
+CONFIG_MTK_RT_FIRST_CARD=7915
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
 CONFIG_MTK_DOT11K_RRM_SUPPORT=y
@@ -23,7 +23,7 @@ CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_DOT11V_WNM=y
 CONFIG_MTK_FTM_SUPPORT=y
 CONFIG_MTK_MBO_SUPPORT=y
-# CONFIG_MTK_SECOND_IF_MT7615E is not set
+# CONFIG_MTK_SECOND_IF_MT7915E is not set
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
 CONFIG_MTK_LED_CONTROL_SUPPORT=y
@@ -48,11 +48,12 @@ CONFIG_SUPPORT_WLAN_OPTIMIZE=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_TX=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_RX=y
 CONFIG_WIFI_MODE_BOTH=m
-CONFIG_CHIP_MT7615E=y
+CONFIG_CHIP_MT7915E=y
 CONFIG_MT_WIFI=m
 CONFIG_WIFI_BASIC_FUNC=y
 CONFIG_DOT11_N_SUPPORT=y
 CONFIG_DOT11_VHT_AC=y
+CONFIG_DOT11_HE_AX=y
 CONFIG_HDR_TRANS_TX_SUPPORT=y
 CONFIG_HDR_TRANS_RX_SUPPORT=y
 CONFIG_DBDC_MODE=y
@@ -102,17 +103,29 @@ CONFIG_PACKAGE_6to4=y
 CONFIG_PACKAGE_luci-app-nat6-helper=y
 
 #
+#samba
+#
+#CONFIG_PACKAGE_autosamba=y
+#CONFIG_PACKAGE_samba36-server is not set
+
+#
 # USB与存储相关支持
 #
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_ntfs-3g=y
 #CONFIG_PACKAGE_kmod-mtd-rw=y
 CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
 
 #
 # 插件集成
 #
 CONFIG_PACKAGE_adbyby=y
+#CONFIG_PACKAGE_appfilter=y
+CONFIG_PACKAGE_aria2=y
+#CONFIG_PACKAGE_aliyundrive-webdav=y
 CONFIG_PACKAGE_fullconenat=y
 CONFIG_PACKAGE_kmod-mtk-hnat=y
 #CONFIG_PACKAGE_natflow=y
@@ -120,14 +133,70 @@ CONFIG_PACKAGE_kmod-mtk-hnat=y
 #CONFIG_PACKAGE_natflow-boot=y
 #CONFIG_PACKAGE_natflow-auth=y
 #CONFIG_PACKAGE_luci-app-natflow-users=y
+CONFIG_PACKAGE_UnblockNeteaseMusic-NodeJS=y
 CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
+#CONFIG_PACKAGE_netdata=y
+#CONFIG_PACKAGE_uugamebooster=y
+CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
+#CONFIG_PACKAGE_luci-app-adguardhome=y #adguard home
+#CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+#CONFIG_PACKAGE_luci-app-airplay2=y
+#CONFIG_PACKAGE_luci-app-appfilter=y
+CONFIG_PACKAGE_luci-app-aria2=y
+#CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
+#CONFIG_PACKAGE_luci-app-cd8021x=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
+CONFIG_PACKAGE_luci-app-wol=y
+#CONFIG_PACKAGE_luci-app-minidlna=y
+#CONFIG_PACKAGE_luci-app-ramfree=y
+CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-app-familycloud=y
+CONFIG_PACKAGE_luci-app-filetransfer=y
+CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
+#CONFIG_PACKAGE_luci-app-guest-wifi=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
 #CONFIG_PACKAGE_luci-app-store=y
+#CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#CONFIG_PACKAGE_luci-app-netdata=y
+#CONFIG_PACKAGE_luci-app-nfs=y
+#CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-openclash=n
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-eqos=y
+#CONFIG_PACKAGE_luci-app-samba=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-pushbot=y
+#CONFIG_PACKAGE_luci-app-shairplay=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
+#CONFIG_PACKAGE_luci-app-transmission=y
+CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-upnp=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-app-vsftpd=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-app-xlnetacc=y
+CONFIG_PACKAGE_luci-app-zerotier=y
 
 #多播
 CONFIG_PACKAGE_luci-app-syncdial=y
@@ -147,6 +216,10 @@ CONFIG_PACKAGE_luci-theme-bootstrap=n
 #
 # 基础命令及其他
 #
+CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_kmod-mtk-hwnat=y
 CONFIG_PACKAGE_hw_nat_ctl=y
+CONFIG_PACKAGE_libjpeg-turbo=y
+CONFIG_PACKAGE_libpng=y
+CONFIG_PACKAGE_libwebp=y
 CONFIG_PACKAGE_kmod-hw_nat=y
