--- a/config/TX1801-xiao.config
+++ b/config/TX1801-xiao.config
@@ -121,7 +121,7 @@ CONFIG_PACKAGE_kmod-mtk-hnat=y
 #CONFIG_PACKAGE_natflow-boot=y
 #CONFIG_PACKAGE_natflow-auth=y
 #CONFIG_PACKAGE_luci-app-natflow-users=y
-CONFIG_PACKAGE_mtk_apcli=y
+#CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
