--- a/config/TX1801.config
+++ b/config/TX1801.config
@@ -134,7 +134,7 @@ CONFIG_PACKAGE_kmod-mtk-hnat=y
 #CONFIG_PACKAGE_natflow-auth=y
 #CONFIG_PACKAGE_luci-app-natflow-users=y
 CONFIG_PACKAGE_UnblockNeteaseMusic-NodeJS=y
-CONFIG_PACKAGE_mtk_apcli=y
+#CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
 #CONFIG_PACKAGE_netdata=y
 #CONFIG_PACKAGE_uugamebooster=y
