--- a/config/TX1801-xiao.config
+++ b/config/TX1801-xiao.config
@@ -13,7 +13,8 @@ CONFIG_MTK_FIRST_IF_EPAELNA=y
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
 CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_FIRST_IF_MT7915E=y
+CONFIG_MTK_AP_SUPPORT=y
+CONFIG_MTK_FIRST_IF_MT7915=y
 CONFIG_MTK_RT_FIRST_CARD=7915
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
@@ -48,7 +49,7 @@ CONFIG_SUPPORT_WLAN_OPTIMIZE=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_TX=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_RX=y
 CONFIG_WIFI_MODE_BOTH=m
-CONFIG_CHIP_MT7915E=y
+CONFIG_CHIP_MT7915=y
 CONFIG_MT_WIFI=m
 CONFIG_WIFI_BASIC_FUNC=y
 CONFIG_DOT11_N_SUPPORT=y
@@ -59,6 +60,7 @@ CONFIG_HDR_TRANS_RX_SUPPORT=y
 CONFIG_DBDC_MODE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
 CONFIG_DEFAULT_5G_PROFILE=y
+CONFIG_MEMORY_OPTIMIZATION=y
 #
 #开启off加速
 #
@@ -103,14 +105,6 @@ CONFIG_PACKAGE_6to4=y
 CONFIG_PACKAGE_luci-app-nat6-helper=y
 
 #
-# USB与存储相关支持
-#
-CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_ntfs-3g=y
-#CONFIG_PACKAGE_kmod-mtd-rw=y
-CONFIG_PACKAGE_kmod-usb-printer=y
-
-#
 # 插件集成
 #
 CONFIG_PACKAGE_adbyby=y
@@ -124,11 +118,6 @@ CONFIG_PACKAGE_kmod-mtk-hnat=y
 #CONFIG_PACKAGE_mtk_apcli=y
 CONFIG_PACKAGE_mtkiappd=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-dnsfilter=y
-CONFIG_PACKAGE_luci-app-flowoffload=y
-#CONFIG_PACKAGE_luci-app-store=y
-CONFIG_PACKAGE_luci-app-eqos=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
 
 #多播
 CONFIG_PACKAGE_luci-app-syncdial=y
