--- a/config/TX1801.config
+++ b/config/TX1801.config
@@ -13,7 +13,8 @@ CONFIG_MTK_FIRST_IF_EPAELNA=y
 CONFIG_MTK_FAST_NAT_SUPPORT=n
 CONFIG_MTK_WHNAT_SUPPORT=n
 CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_FIRST_IF_MT7915E=y
+CONFIG_MTK_AP_SUPPORT=y
+CONFIG_MTK_FIRST_IF_MT7915=y
 CONFIG_MTK_RT_FIRST_CARD=7915
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
@@ -48,7 +49,7 @@ CONFIG_SUPPORT_WLAN_OPTIMIZE=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_TX=y
 CONFIG_SUPPORT_WLAN_OPTIMIZE_RX=y
 CONFIG_WIFI_MODE_BOTH=m
-CONFIG_CHIP_MT7915E=y
+CONFIG_CHIP_MT7915=y
 CONFIG_MT_WIFI=m
 CONFIG_WIFI_BASIC_FUNC=y
 CONFIG_DOT11_N_SUPPORT=y
@@ -59,6 +60,7 @@ CONFIG_HDR_TRANS_RX_SUPPORT=y
 CONFIG_DBDC_MODE=y
 CONFIG_MULTI_PROFILE_SUPPORT=y
 CONFIG_DEFAULT_5G_PROFILE=y
+CONFIG_MEMORY_OPTIMIZATION=y
 #
 #开启off加速
 #
