--- a/config/TX1801-xiao.config
+++ b/config/TX1801-xiao.config
@@ -9,6 +9,7 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_h3c_tx1801-plus=y
 # MTK驱动选项
 #
 CONFIG_MTK_FIRST_IF_EPAELNA=y
+# CONFIG_MTK_FIRST_IF_IPAILNA is not set
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_WNM_SUPPORT=y
 CONFIG_MTK_DOT11K_RRM_SUPPORT=y
@@ -22,6 +23,7 @@ CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_SINGLE_SKU=y
 CONFIG_SINGLE_SKU_V2_SUPPORT=y
 
+CONFIG_DOT11_HE_AX=y
 #
 #开启off加速
 #
