--- a/config/TX1801.config
+++ b/config/TX1801.config
@@ -112,7 +112,7 @@ CONFIG_PACKAGE_6to4=y
 #CONFIG_PACKAGE_automount=y
 #CONFIG_PACKAGE_ntfs-3g=y
 #CONFIG_PACKAGE_kmod-mtd-rw=y
-#CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-printer=y
 #CONFIG_PACKAGE_kmod-usb-net=y
 #CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 #CONFIG_PACKAGE_kmod-usb-net-rndis=y
