--- a/.github/workflows/tx1801-xiao1.yml
+++ b/.github/workflows/tx1801-xiao1.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/benboguan/lede0
-  REPO_BRANCH: master
+  REPO_BRANCH: 7915-test
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/tx1801-xiao1.config
   DIY_P1_SH: script/diy-part1.sh
