--- a/config/tx1801-xiao1.config
+++ b/config/tx1801-xiao1.config
@@ -3,7 +3,7 @@
 #
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_h3c_tx1801-plus=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_jcg_q20=y
 
-CONFIG_PACKAGE_kmod-mt7915d=y
-CONFIG_PACKAGE_kmod-mt7915_dbdc=y
+#CONFIG_PACKAGE_kmod-mt7915d=y
+#CONFIG_PACKAGE_kmod-mt7915_dbdc=y
