--- a/config/TX1801-xiao.config
+++ b/config/TX1801-xiao.config
@@ -22,8 +22,9 @@ CONFIG_MTK_MBO_SUPPORT=y
 CONFIG_MTK_LED_CONTROL_SUPPORT=y
 CONFIG_SINGLE_SKU=y
 CONFIG_SINGLE_SKU_V2_SUPPORT=y
-
+CONFIG_HW_NAT=y
 CONFIG_DOT11_HE_AX=y
+
 #
 #开启off加速
 #
@@ -105,7 +106,7 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 #
 # 主题
 #
-CONFIG_PACKAGE_luci-theme-argon-18.06=y
+CONFIG_PACKAGE_luci-theme-argon-mod=y
 CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
