更新 tx1801-xiao.yml

--- a/.github/workflows/tx1801-xiao.yml
+++ b/.github/workflows/tx1801-xiao.yml
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/benboguan/lede0
   REPO_BRANCH: mt7915-dbdc
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/tx1801-xiao.config
+  CONFIG_FILE: config/tx1801-xiao1.config
   DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part2.sh
   UPLOAD_BIN_DIR: true
@@ -53,11 +53,11 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-    - name: 加载Cache缓存
-      uses: klever1988/cachewrtbuild@main
-      with:
-        ccache: 'true'
-        prefix: ${{ github.workspace }}/openwrt
+#    - name: 加载Cache缓存
+#      uses: klever1988/cachewrtbuild@main
+#      with:
+#        ccache: 'true'
+#        prefix: ${{ github.workspace }}/openwrt
     - name: 加载feeds跟自定义插件
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
