--- a/.github/workflows/tx1801-xiao.yml
+++ b/.github/workflows/tx1801-xiao.yml
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/benboguan/lede0
   REPO_BRANCH: mt7915-dbdc
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/tx1801-xiao1.config
+  CONFIG_FILE: config/tx1801-xiao.config
   DIY_P1_SH: script/diy-part1.sh
   DIY_P2_SH: script/diy-part2.sh
   UPLOAD_BIN_DIR: true
