--- a/.github/workflows/tx1801-xiao.yml
+++ b/.github/workflows/tx1801-xiao.yml
@@ -63,6 +63,8 @@ jobs:
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
+        make dirclean
+        rm -rf tmp
         $GITHUB_WORKSPACE/$DIY_P1_SH
     - name: 清除 feeds
       run: cd openwrt && ./scripts/feeds clean
@@ -85,12 +87,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-    - name: SSH远程连接服务器配置固件
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
     - name: 下载软件包
       id: package
       run: |
