--- a/.github/workflows/tx1801-xiao.yml
+++ b/.github/workflows/tx1801-xiao.yml
@@ -53,18 +53,16 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-    - name: 加载Cache缓存
-      uses: klever1988/cachewrtbuild@main
-      with:
-        ccache: 'true'
-        prefix: ${{ github.workspace }}/openwrt
+#    - name: 加载Cache缓存
+#      uses: klever1988/cachewrtbuild@main
+#      with:
+#        ccache: 'true'
+#        prefix: ${{ github.workspace }}/openwrt
     - name: 加载feeds跟自定义插件
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
-        make dirclean
-        rm -rf tmp
         $GITHUB_WORKSPACE/$DIY_P1_SH
     - name: 清除 feeds
       run: cd openwrt && ./scripts/feeds clean
