更新 msg1500.config

--- a/config/msg1500.config
+++ b/config/msg1500.config
@@ -199,6 +199,7 @@ CONFIG_PACKAGE_drill=y
 CONFIG_PACKAGE_libcron=y
 CONFIG_PACKAGE_kmod-hw_nat=y
 CONFIG_PACKAGE_mt7621-qtn-rgmii=y
+CONFIG_DEFAULT_kmod-crypto-hw-eip93=y
 #CONFIG_PACKAGE_wpa-supplicant=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-en=y
