--- a/config/r30b1.config
+++ b/config/r30b1.config
@@ -1,62 +1,15 @@
 #
 # 机型选择
 #
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_h3c_tx1801-plus=y
+CONFIG_TARGET_mediatek=y
+CONFIG_TARGET_mediatek_mt7981=y
+CONFIG_TARGET_MULTI_PROFILE=y
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_clt-r30b1-112m=y
+CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_clt-r30b1-112m=""
 
 #
 # MTK驱动选项
 #
-CONFIG_MTK_FIRST_IF_EPAELNA=y
-# CONFIG_MTK_FIRST_IF_IPAILNA is not set
-CONFIG_MTK_FAST_NAT_SUPPORT=n
-CONFIG_MTK_WHNAT_SUPPORT=y
-CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_AP_SUPPORT=y
-CONFIG_MTK_INTERWORKING=y
-CONFIG_MTK_WNM_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
-CONFIG_DOT11V_WNM=y
-CONFIG_MTK_FTM_SUPPORT=y
-CONFIG_MTK_MBO_SUPPORT=y
-CONFIG_MULTI_PROFILE_SUPPORT=y
-CONFIG_MTK_LED_CONTROL_SUPPORT=y
-CONFIG_SINGLE_SKU=y
-CONFIG_SINGLE_SKU_V2_SUPPORT=y
-CONFIG_HW_NAT=y
-CONFIG_FAST_NAT_SUPPORT=y
-CONFIG_RA_NAT_HW=y
-CONFIG_RA_HW_NAT=m
-CONFIG_RA_HW_NAT_LAN_VLANID=1
-CONFIG_RA_HW_NAT_WAN_VLANID=2
-# CONFIG_RA_HW_NAT_TBL_1K is not set
-# CONFIG_RA_HW_NAT_TBL_2K is not set
-# CONFIG_RA_HW_NAT_TBL_4K is not set
-# CONFIG_RA_HW_NAT_TBL_8K is not set
-CONFIG_RA_HW_NAT_TBL_16K=y
-CONFIG_HNAT_V2=y
-CONFIG_RA_HW_NAT_IPV6=y
-CONFIG_RA_HW_NAT_WIFI=y
-CONFIG_RA_HW_NAT_WIFI_NEW_ARCH=y
-CONFIG_SUPPORT_WLAN_OPTIMIZE=y
-CONFIG_SUPPORT_WLAN_OPTIMIZE_TX=y
-CONFIG_SUPPORT_WLAN_OPTIMIZE_RX=y
-CONFIG_WIFI_MODE_BOTH=m
-CONFIG_CHIP_MT7915=y
-CONFIG_MT_WIFI=m
-CONFIG_WIFI_BASIC_FUNC=y
-CONFIG_DOT11_N_SUPPORT=y
-CONFIG_DOT11_VHT_AC=y
-CONFIG_DOT11_HE_AX=y
-CONFIG_HDR_TRANS_TX_SUPPORT=y
-CONFIG_HDR_TRANS_RX_SUPPORT=y
-CONFIG_DBDC_MODE=y
-CONFIG_MULTI_PROFILE_SUPPORT=y
-CONFIG_DEFAULT_5G_PROFILE=y
-CONFIG_MEMORY_OPTIMIZATION=y
 #
 #开启off加速
 #
@@ -65,14 +18,14 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 #CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 #CONFIG_PACKAGE_kmod-fast-classifier=y
 #CONFIG_PACKAGE_fast-classifier=y
-CONFIG_PACKAGE_shortcut-fe=y
+#CONFIG_PACKAGE_shortcut-fe=y
 #CONFIG_PACKAGE_shortcut-fe-simulated-driver=y
 #CONFIG_PACKAGE_kmod-shortcut-fe=y
 #CONFIG_PACKAGE_kmod-shortcut-fe-drv=y
 #CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
-CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-turboacc-mtk=y
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_shortcut-fe=y
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
@@ -112,7 +65,7 @@ CONFIG_PACKAGE_6to4=y
 #CONFIG_PACKAGE_automount=y
 #CONFIG_PACKAGE_ntfs-3g=y
 #CONFIG_PACKAGE_kmod-mtd-rw=y
-CONFIG_PACKAGE_kmod-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-printer=y
 #CONFIG_PACKAGE_kmod-usb-net=y
 #CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 #CONFIG_PACKAGE_kmod-usb-net-rndis=y
@@ -126,7 +79,7 @@ CONFIG_PACKAGE_aria2=y
 #CONFIG_PACKAGE_aliyundrive-webdav=y
 CONFIG_PACKAGE_fullconenat=y
 CONFIG_PACKAGE_kmod-mtk-hnat=y
-CONFIG_PACKAGE_mtk-eip93=y
+CONFIG_PACKAGE_mtk-eip97=y
 #CONFIG_PACKAGE_natflow=y
 #CONFIG_PACKAGE_kmod-natflow=y
 #CONFIG_PACKAGE_natflow-boot=y
@@ -146,6 +99,7 @@ CONFIG_PACKAGE_luci-app-adbyby-plus=y
 #CONFIG_PACKAGE_luci-app-airplay2=y
 #CONFIG_PACKAGE_luci-app-appfilter=y
 CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-mtk=y
 #CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 #CONFIG_PACKAGE_luci-app-cd8021x=y
@@ -226,3 +180,4 @@ CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libwebp=y
 CONFIG_PACKAGE_kmod-hw_nat=y
+CONFIG_DEFAULT_kmod-crypto-hw-eip97=y
