--- a/.github/workflows/r30b1.yml
+++ b/.github/workflows/r30b1.yml
@@ -9,7 +9,7 @@
 #代码里有 name: 后面的内容随便改,冒号后面是有个空格的,如果修改固件名字就要考虑能不能显示出你想要的
 
 
-name: OpenWrt-tx1801 闭源固件
+name: immortalwrt-mt798x-r30b1 闭源固件
 
 on: 
 
