--- a/config/r30b1.config
+++ b/config/r30b1.config
@@ -167,7 +167,7 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 #
 # 主题
 #
-CONFIG_PACKAGE_luci-theme-argon-18.06=y
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
@@ -179,5 +179,9 @@ CONFIG_PACKAGE_hw_nat_ctl=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libwebp=y
+CONFIG_PACKAGE_mt_wifi=y
+CONFIG_PACKAGE_wifi-profile=y
+CONFIG_PACKAGE_kmod-conninfra=y
+CONFIG_PACKAGE_kmod-warp=y
 CONFIG_PACKAGE_kmod-hw_nat=y
 CONFIG_DEFAULT_kmod-crypto-hw-eip97=y
