--- a/config/r30b1.config
+++ b/config/r30b1.config
@@ -365,9 +365,14 @@ CONFIG_PACKAGE_luci-ssl=y
 
 #多播
 CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-mwan3helper=y
 
 #IPTV组播
 #CONFIG_PACKAGE_luci-app-udpxy=y
 #CONFIG_PACKAGE_luci-app-iptvhelper=y
+
+#
+# 基础命令及其他
+#
+CONFIG_PACKAGE_miniupnpd=y
