--- a/.github/workflows/r30b1-uboot.yml
+++ b/.github/workflows/r30b1-uboot.yml
@@ -32,10 +32,11 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo apt update
-        sudo apt install gcc-aarch64-linux-gnu build-essential flex bison libssl-dev python3-distutils
-        sudo apt autoremove
-        sudo apt autoclean
+        sudo -E apt-get update
+        sudo -E apt-get -y install build-essential gcc-aarch64-linux-gnu build-essential flex bison libssl-dev python3-distutils device-tree-compiler
+        sudo -E apt-get -y autoremove
+        sudo -E apt-get autoclean
+        sudo timedatectl set-timezone "$TZ"
     - name: 下载uboot源码
       run: |
         git clone https://github.com/benboguan/bl-mt798x.git /opt/uboot
