--- a/.github/workflows/r30b1-uboot.yml
+++ b/.github/workflows/r30b1-uboot.yml
@@ -26,7 +26,7 @@ jobs:
 
     steps:
     - name: 准备结束
-      uses: actions/checkout@master
+      uses: actions/checkout@main
 
     - name: 开始安装编译所需系统
       env:
@@ -44,8 +44,12 @@ jobs:
         cd /opt/uboot
         sudo chmod +x build.sh
         sudo ./build.sh
+        echo "status=success" >>$GITHUB_OUTPUT
+        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
+        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
     - name : 上传
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: opt/uboot_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
@@ -62,13 +66,13 @@ jobs:
         
     - name: 上传.config配置文件在github空间    
       if: steps.organizer.outputs.status == 'success' && env.UPLOAD_CONFIG == 'true'
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@main
       with:
         name: config.buildinfo_${{ env.FILE_DATE }}
         path: ./config    
     
     - name: 上传固件在github空间
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         name: r30b1-bl-mt798x uboot
