--- a/.github/workflows/r30b1.yml
+++ b/.github/workflows/r30b1.yml
@@ -15,6 +15,13 @@ on:
 
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+      clean:
+         description: 'clean ccache'
+         default: 'false'
+
+  #schedule:
+  #- cron: 0 17 * * 1
 
 env:
   REPO_URL: https://github.com/benboguan/immortalwrt-mt798x
@@ -57,6 +64,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
+         clean: ${{github.event.inputs.clean}}
         prefix: ${{ github.workspace }}/openwrt
     - name: 加载feeds跟自定义插件
       run: |
@@ -104,7 +112,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        make -j$(nproc) || make -j1 V=s
         echo "status=success" >>$GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
